Changed Message Implementation; Added top and speed; Removed unnecessary permission nodes; New Argument Implementation (1 of 2)