@@ -9,14 +9,11 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.ConsoleCommandSender;
 import org.bukkit.entity.Player;
 
-import com.wolfco.common.Utilities;
 import com.wolfco.common.classes.Argument;
-import com.wolfco.common.classes.ArgumentType;
 import com.wolfco.common.classes.Command;
 import com.wolfco.common.classes.CoreCommandExecutor;
+import com.wolfco.common.classes.types.ArgumentType;
 import com.wolfco.main.Core;
-
-import net.kyori.adventure.audience.Audience;
 
 public class Gamemode implements CoreCommandExecutor {
 
@@ -24,7 +21,6 @@ public class Gamemode implements CoreCommandExecutor {
     public Command getCommand() {
         Command command = new Command("gamemode");
         command.setDescription("Used to modify player's gamemode.");
-        command.setNode("wolfcore.gamemode");
         command.setArguments(Arrays.asList(
                 new Argument(ArgumentType.GAMEMODE, true),
                 new Argument(ArgumentType.OTHERPLAYER, false)
@@ -52,30 +48,27 @@ public class Gamemode implements CoreCommandExecutor {
         Collection<Player> target = (Collection<Player>) argumentValues[1];
 
         Boolean console = (sender instanceof ConsoleCommandSender);
-        Audience senderAudience = core.getAdventure().sender(sender);
 
         if (console && args.length == 1) {
-            Utilities.sendColorText(senderAudience, core.getMessage("generic.consoleargs", List.of("2")));
+            core.sendPreset(sender, "generic.consoleargs", List.of("2"));
             return false;
         }
 
         if (args.length == 1) {
 
             if (console) {
-                Utilities.sendColorText(senderAudience, core.getMessage("generic.consoleargs", List.of("2")));
+                core.sendPreset(sender, "generic.consoleargs", List.of("2"));
                 return false;
             }
 
             ((Player) sender).setGameMode(mode);
-            Utilities.sendColorText(senderAudience, core.getMessage("gamemode.selfsuccess", List.of(mode.toString())));
+            core.sendPreset(sender, "gamemode.selfsuccess", List.of(mode.toString()));
             return true;
         } else if (target instanceof Collection) {
             if (target.size() == 1) {
-                Utilities.sendColorText(senderAudience,
-                        core.getMessage("gamemode.othersuccess", List.of(target.iterator().next().getName(), mode.toString())));
+                core.sendPreset(sender, "gamemode.othersuccess", List.of(target.iterator().next().getName(), mode.toString()));
             } else {
-                Utilities.sendColorText(senderAudience, core.getMessage("gamemode.multisuccess",
-                        Arrays.asList(String.valueOf(target.size()), mode.toString())));
+                core.sendPreset(sender, "gamemode.multisuccess", List.of(String.valueOf(target.size()), mode.toString()));
             }
 
             for (Player p : target) {
